# keystoneauth

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  bindep.txt  lower-constraints.txt  openstack-common.conf  py35-upper-constraints.txt  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/ext/: apidoc.py  list_plugins.py
doc/source/: authentication-plugins.rst  conf.py  extras.rst  index.rst  migrating.rst  plugin-options.rst  using-api-v2.rst  using-api-v3.rst  using-sessions.rst
doc/source/man/: keystone.rst
keystoneauth/: _utils.py  access.py  adapter.py  discover.py  exceptions.py  i18n.py  service_catalog.py  service_providers.py  session.py  utils.py
keystoneauth/auth/: __init__.py  base.py  cli.py  conf.py  token_endpoint.py
keystoneauth/auth/identity/: __init__.py  access.py  base.py  v2.py
keystoneauth/auth/identity/generic/: __init__.py  base.py  password.py  token.py
keystoneauth/auth/identity/v3/: __init__.py  base.py  federated.py  federation.py  k2k.py  password.py  token.py
keystoneauth/exceptions/: __init__.py  auth.py  auth_plugins.py  catalog.py  connection.py  discovery.py  http.py  response.py  service_providers.py
keystoneauth/fixture/: __init__.py  discovery.py  v2.py  v3.py
keystoneauth/hacking/: checks.py
keystoneauth/openstack/common/: _i18n.py
keystoneauth/openstack/common/apiclient/: auth.py  base.py  client.py  exceptions.py  fake_client.py  utils.py
keystoneauth/tests/unit/: keystoneauth_fixtures.py  test_discovery.py  test_fixtures.py  test_hacking_checks.py  test_session.py  utils.py
keystoneauth/tests/unit/auth/: test_access.py  test_cli.py  test_conf.py  test_identity_common.py  test_identity_v2.py  test_identity_v3.py  test_identity_v3_federated.py  test_identity_v3_federation.py  test_loading.py  test_password.py  test_token.py  test_token_endpoint.py  utils.py
keystoneauth1/: __init__.py  _fair_semaphore.py  _utils.py  access.py  adapter.py  base.py  cli.py  conf.py  discover.py  http_basic.py  noauth.py  plugin.py  service_token.py  session.py  token_endpoint.py
keystoneauth1/access/: __init__.py  access.py  service_catalog.py  service_providers.py  types.py
keystoneauth1/auth/: __init__.py  cli.py  conf.py  token_endpoint.py
keystoneauth1/auth/identity/: __init__.py  access.py  base.py  v2.py
keystoneauth1/auth/identity/generic/: __init__.py  base.py  password.py  token.py
keystoneauth1/auth/identity/v3/: __init__.py  base.py  federation.py  k2k.py  password.py  token.py
keystoneauth1/exceptions/: __init__.py  auth.py  auth_plugins.py  base.py  catalog.py  connection.py  discovery.py  http.py  oidc.py  response.py  service_providers.py
keystoneauth1/extras/: kerberos.py
keystoneauth1/extras/_saml2/: __init__.py  _loading.py
keystoneauth1/extras/_saml2/v3/: __init__.py  adfs.py  base.py  saml2.py
keystoneauth1/extras/kerberos/: __init__.py  _loading.py
keystoneauth1/extras/oauth1/: __init__.py  _loading.py  v3.py
keystoneauth1/fixture/: __init__.py  discovery.py  hooks.py  keystoneauth_betamax.py  plugin.py  serializer.py  v2.py  v3.py
keystoneauth1/hacking/: checks.py
keystoneauth1/identity/: __init__.py  access.py  base.py  v2.py
keystoneauth1/identity/generic/: __init__.py  base.py  password.py  token.py
keystoneauth1/identity/v3/: __init__.py  application_credential.py  base.py  federation.py  k2k.py  multi_factor.py  oauth2_client_credential.py  oauth2_mtls_client_credential.py  oidc.py  password.py  receipt.py  token.py  tokenless_auth.py  totp.py
keystoneauth1/loading/: __init__.py  _utils.py  adapter.py  base.py  cli.py  conf.py  identity.py  opts.py  session.py
keystoneauth1/loading/_plugins/: admin_token.py  http_basic.py  noauth.py  token_endpoint.py
keystoneauth1/loading/_plugins/identity/: admin_token.py  base.py  generic.py  v2.py  v3.py
keystoneauth1/tests/unit/: client_fixtures.py  k2k_fixtures.py  matchers.py  oidc_fixtures.py  test_betamax_fixture.py  test_betamax_hooks.py  test_betamax_serializer.py  test_discovery.py  test_fair_sempahore.py  test_fixtures.py  test_hacking_checks.py  test_http_basic.py  test_matchers.py  test_noauth.py  test_service_token.py  test_session.py  test_token_endpoint.py  test_utils.py  utils.py
keystoneauth1/tests/unit/access/: test_v2_access.py  test_v2_service_catalog.py  test_v3_access.py  test_v3_service_catalog.py
keystoneauth1/tests/unit/auth/: test_access.py  test_cli.py  test_conf.py  test_identity_common.py  test_identity_v2.py  test_identity_v3.py  test_identity_v3_federation.py  test_loading.py  test_password.py  test_token.py  test_token_endpoint.py  utils.py
keystoneauth1/tests/unit/data/: ksa_betamax_test_cassette.json  ksa_betamax_test_cassette.yaml  ksa_serializer_data.json
keystoneauth1/tests/unit/exceptions/: test_exceptions.py
keystoneauth1/tests/unit/identity/: test_access.py  test_identity_common.py  test_identity_v2.py  test_identity_v3.py  (+6 more)
keystoneclient/: exceptions.py
releasenotes/notes/: add-otp-support-to-v3oidcpassword-plugin-520160b14e1fcc57.yaml  add-typing-617a487a60de0b86.yaml  allow-os-access-token-type-device-auth-536c6d2b708e9b1f.yaml  basic-http-auth-45bea4298209df75.yaml  bp-oauth2-client-credentials-ext-06271700d4f33a7e.yaml  bp-support-oauth2-mtls-177cda05265ae65c.yaml  bug-1839748-5d8dfc99c43aaefc.yaml  bug-1840235-ef2946d149ac329c.yaml  bug-1876317-1db97d1b12a3e4b4.yaml  bug-1998366-27cd486b46fb56b0.yaml  bug-2053965-b9717c6a8c058956.yaml  bug-2105891-92c33eb445d55c72.yaml  cleanup-session-on-delete-1ed6177d4c5c1f83.yaml  drop-oidc-grant_type-parameter-79ca58f56238a615.yaml  drop-py-2-7-f90c67a5db0dfeb8.yaml  drop-python38-cb0b045f67bf8a1b.yaml  drops-url-parameters-on-redirect-13951b4a4c830d0f.yaml  get-auth-ref-7418e13bd0942060.yaml  noauth-discovery-c26d82a32c36d41d.yaml  retry-authenticated-discovery-19c4354ff983f507.yaml  timeout-float-a2433987d328604d.yaml
releasenotes/source/: conf.py  index.rst
(+26 files in other folders)
