[metadata]
name = keystoneauth1
summary = Authentication Library for OpenStack Identity
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/keystoneauth/latest/
python_equires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    keystoneauth1

[extras]
kerberos =
  requests-kerberos>=0.8.0 # ISC
saml2 =
  lxml>=4.2.0 # BSD
oauth1 =
  oauthlib>=0.6.2 # BSD
betamax =
  betamax>=0.7.0 # Apache-2.0
  fixtures>=3.0.0 # Apache-2.0/BSD
  mock>=2.0.0 # BSD

[entry_points]

keystoneauth1.plugin =
    none = keystoneauth1.loading._plugins.noauth:NoAuth
    http_basic = keystoneauth1.loading._plugins.http_basic:HTTPBasicAuth
    password = keystoneauth1.loading._plugins.identity.generic:Password
    token = keystoneauth1.loading._plugins.identity.generic:Token
    admin_token = keystoneauth1.loading._plugins.admin_token:AdminToken
    v2password = keystoneauth1.loading._plugins.identity.v2:Password
    v2token = keystoneauth1.loading._plugins.identity.v2:Token
    v3password = keystoneauth1.loading._plugins.identity.v3:Password
    v3token = keystoneauth1.loading._plugins.identity.v3:Token
    v3oidcclientcredentials = keystoneauth1.loading._plugins.identity.v3:OpenIDConnectClientCredentials
    v3oidcpassword = keystoneauth1.loading._plugins.identity.v3:OpenIDConnectPassword
    v3oidcauthcode = keystoneauth1.loading._plugins.identity.v3:OpenIDConnectAuthorizationCode
    v3oidcaccesstoken = keystoneauth1.loading._plugins.identity.v3:OpenIDConnectAccessToken
    v3oauth1 = keystoneauth1.extras.oauth1._loading:V3OAuth1
    v3kerberos = keystoneauth1.extras.kerberos._loading:Kerberos
    v3totp = keystoneauth1.loading._plugins.identity.v3:TOTP
    v3fedkerb = keystoneauth1.extras.kerberos._loading:MappedKerberos
    v3tokenlessauth = keystoneauth1.loading._plugins.identity.v3:TokenlessAuth
    v3adfspassword = keystoneauth1.extras._saml2._loading:ADFSPassword
    v3samlpassword = keystoneauth1.extras._saml2._loading:Saml2Password
    v3applicationcredential = keystoneauth1.loading._plugins.identity.v3:ApplicationCredential
    v3multifactor = keystoneauth1.loading._plugins.identity.v3:MultiFactor
