[metadata]
name = keystoneauth1
summary = Authentication Library for OpenStack Identity
description_file =
    README.rst
long_description_content_type = text/x-rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/keystoneauth/latest/
project_urls =
    Documentation = https://docs.openstack.org/keystoneauth/latest/
    Source = https://opendev.org/openstack/keystoneauth
    Bugs = https://bugs.launchpad.net/keystoneauth
    Release Notes = https://docs.openstack.org/releasenotes/keystoneauth/
python_requires = >=3.9
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[files]
packages =
    keystoneauth1

[extras]
kerberos =
  requests-kerberos>=0.8.0 # ISC
saml2 =
  lxml>=4.2.0 # BSD
oauth1 =
  oauthlib>=0.6.2 # BSD
betamax =
  betamax>=0.7.0 # Apache-2.0
  fixtures>=3.0.0 # Apache-2.0/BSD
  PyYAML>=3.13 # MIT

[entry_points]
keystoneauth1.plugin =
    none = keystoneauth1.loading._plugins.noauth:NoAuth
    http_basic = keystoneauth1.loading._plugins.http_basic:HTTPBasicAuth
    password = keystoneauth1.loading._plugins.identity.generic:Password
    token = keystoneauth1.loading._plugins.identity.generic:Token
    admin_token = keystoneauth1.loading._plugins.admin_token:AdminToken
    v2password = keystoneauth1.loading._plugins.identity.v2:Password
    v2token = keystoneauth1.loading._plugins.identity.v2:Token
    v3password = keystoneauth1.loading._plugins.identity.v3:Password
    v3token = keystoneauth1.loading._plugins.identity.v3:Token
    v3oidcclientcredentials = keystoneauth1.loading._plugins.identity.v3:OpenIDConnectClientCredentials
    v3oidcpassword = keystoneauth1.loading._plugins.identity.v3:OpenIDConnectPassword
    v3oidcdeviceauthz = keystoneauth1.loading._plugins.identity.v3:OpenIDConnectDeviceAuthorization
    v3oidcauthcode = keystoneauth1.loading._plugins.identity.v3:OpenIDConnectAuthorizationCode
    v3oidcaccesstoken = keystoneauth1.loading._plugins.identity.v3:OpenIDConnectAccessToken
    v3oauth1 = keystoneauth1.extras.oauth1._loading:V3OAuth1
    v3kerberos = keystoneauth1.extras.kerberos._loading:Kerberos
    v3totp = keystoneauth1.loading._plugins.identity.v3:TOTP
    v3fedkerb = keystoneauth1.extras.kerberos._loading:MappedKerberos
    v3tokenlessauth = keystoneauth1.loading._plugins.identity.v3:TokenlessAuth
    v3adfspassword = keystoneauth1.extras._saml2._loading:ADFSPassword
    v3samlpassword = keystoneauth1.extras._saml2._loading:Saml2Password
    v3applicationcredential = keystoneauth1.loading._plugins.identity.v3:ApplicationCredential
    v3multifactor = keystoneauth1.loading._plugins.identity.v3:MultiFactor
    v3oauth2clientcredential = keystoneauth1.loading._plugins.identity.v3:OAuth2ClientCredential
    v3oauth2mtlsclientcredential = keystoneauth1.loading._plugins.identity.v3:OAuth2mTlsClientCredential

[mypy]
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
follow_imports = normal
check_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
strict_equality = true
strict_concatenate = true
disallow_untyped_decorators = true
disallow_any_generics = true
# the following are false while we incrementally add typing
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_incomplete_defs = true
disallow_untyped_defs = false
no_implicit_reexport = true
extra_checks = true
# keep this in-sync with 'mypy.exclude' in '.pre-commit-config.yaml'
exclude = (?x)(
    doc
    | examples
    | releasenotes
  )

[mypy-keystoneauth1.tests.unit.*]
ignore_errors = true

[mypy-keystoneauth1.adapter]
disallow_untyped_defs = true

[mypy-keystoneauth1.discover]
disallow_untyped_defs = true

[mypy-keystoneauth1.exceptions.*]
disallow_untyped_defs = true

[mypy-keystoneauth1.http_basic]
disallow_untyped_defs = true

[mypy-keystoneauth1.noauth]
disallow_untyped_defs = true

[mypy-keystoneauth1.plugin]
disallow_untyped_defs = true

[mypy-keystoneauth1.service_token]
disallow_untyped_defs = true

[mypy-keystoneauth1.session]
disallow_untyped_defs = true

[mypy-keystoneauth1.token_endpoint]
disallow_untyped_defs = true

[mypy-keystoneauth1._fair_semaphore]
disallow_untyped_defs = true

[mypy-keystoneauth1._utils]
disallow_untyped_defs = true
